--- a/presentation.tex
+++ b/presentation.tex
@@ -314,7 +314,9 @@ Dupačová et al. \cite{dupacova_scenario_2003} provides a greedy algorithm for 
 $$
 The proof also gives \alert{a transporation plan} and a \alert{distribution $\mathbb{Q}$} reaching this value. Then, \alert{we wouldn't rely on solving optimal transport problems to find $D_\ell\left(\mathbb{P},R\cup\{y\}\right)$} (less costly) in order to compute for Dupačová et al' algorithm and local search algorithm.
 \end{frame}
-
+\begin{frame}{NB}
+    I found this morning that there exists such a formula in \cite{dupacova_scenario_2003} but I gave a different proof. What differs is that the proof I made gives a transportation plan.
+\end{frame}
 \begin{frame}{MILP reformulation}
     There exists a MILP reformulation for \alert{$C_\ell\left(\mathbb{P},m\right)$} and \alert{$D_\ell\left(\mathbb{P},m\right)$} that I should study a little more to understand completly.
 \end{frame}
